--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins{
     id 'java'
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
+    id 'nu.studer.jooq' version '5.2.1'
 }
 mainClassName = 'net.toadless.monkebot.Main'
 sourceCompatibility = 14
@@ -32,7 +33,51 @@ dependencies {
     implementation 'com.sedmelluq:lavaplayer:1.3.78'
 
     //Database
-    implementation 'org.mongodb:mongodb-driver-sync:4.4.1'
+    implementation 'org.postgresql:postgresql:42.2.18'
+    jooqGenerator 'org.postgresql:postgresql:42.2.18'
+
+    implementation 'com.zaxxer:HikariCP:4.0.2'
+    implementation 'org.jooq:jooq:3.14.7'
 }
+
+jooq {
+    version = '3.14.4'
+    configurations {
+        main {
+            generateSchemaSourceOnCompilation = false
+            generationTool {
+                logging = org.jooq.meta.jaxb.Logging.WARN
+                jdbc {
+                    url = MONKE_DB_URL
+                    user = MONKE_DB_USER
+                    password = MONKE_DB_PASSWORD
+                    driver = 'org.postgresql.Driver'
+                }
+                generator {
+                    name = 'org.jooq.codegen.DefaultGenerator'
+                    database {
+                        name = 'org.jooq.meta.postgres.PostgresDatabase'
+                        inputSchema = 'public'
+                        includes = '.*'
+                        excludes = ''
+                    }
+                    generate {
+                        deprecated = false
+                        records = true
+                        immutablePojos = true
+                        fluentSetters = true
+                    }
+                    target {
+                        packageName = ''
+                        directory = "src/main/java/net/toadless/monkebot/objects/jooq"
+                        clean = true
+                    }
+                    strategy.name = "org.jooq.codegen.DefaultGeneratorStrategy"
+                }
+            }
+        }
+    }
+}
+
 
 compileJava.options.encoding = 'UTF-8'
