--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: restore gradle.properties
         env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: "true"
           GRADLE_PROPERTIES: ${{ secrets.GRADLE_PROPERTIES }}
         shell: bash
         run: |
