--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,18 +8,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: restore gradle.properties
-        env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: "true"
-          MONKE_DB_URL: ${{ secrets.MONKE_DB_URL }}
-          MONKE_DB_USER: ${{ secrets.MONKE_DB_USER }}
-          MONKE_DB_PASSWORD: ${{ secrets.MONKE_DB_PASSWORD }}
         shell: bash
         run: |
           mkdir -p ~/.gradle/
           echo "::set-env name=GRADLE_USER_HOME::$HOME/.gradle"
-          echo ${MONKE_DB_URL} > ~/.gradle/gradle.properties
-          echo ${MONKE_DB_USER} > ~/.gradle/gradle.properties
-          echo ${MONKE_DB_PASSWORD} > ~/.gradle/gradle.properties
+          echo "MONKE_DB_URL=${{ secrets.MONKE_DB_URL }}" > ~/.gradle/gradle.properties
+          echo "MONKE_DB_USER=${{ secrets.MONKE_DB_USER }}" > ~/.gradle/gradle.properties
+          echo "MONKE_DB_PASSWORD=${{ secrets.MONKE_DB_PASSWORD }}" > ~/.gradle/gradle.properties
       - uses: actions/checkout@v2
       - name: Set up JDK 15
         uses: actions/setup-java@v2
