--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         run: |
           mkdir -p ~/.gradle/
           echo "::set-env name=GRADLE_USER_HOME::$HOME/.gradle"
-      - uses: DamianReeves/write-file-action
+      - uses: DamianReeves/write-file-action@v1
         name: populate gradle.properties
         with:
           path: ~/.gradle/gradle.properties
