--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,18 +11,15 @@ jobs:
         shell: bash
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: "true"
+          MONKE_DB_URL: ${{ secrets.MONKE_DB_URL }}
+          MONKE_DB_USER: ${{ secrets.MONKE_DB_USER }}
+          MONKE_DB_PASSWORD: ${{ secrets.MONKE_DB_PASSWORD }}
         run: |
           mkdir -p ~/.gradle/
           echo "::set-env name=GRADLE_USER_HOME::$HOME/.gradle"
-      - uses: DamianReeves/write-file-action@v1
-        name: populate gradle.properties
-        with:
-          path: ~/.gradle/gradle.properties
-          contents: |
-            MONKE_DB_URL=${{ secrets.MONKE_DB_URL }}
-            MONKE_DB_USER=${{ secrets.MONKE_DB_USER }}
-            MONKE_DB_PASSWORD=${{ secrets.MONKE_DB_PASSWORD }}
-          write-mode: append
+          echo "MONKE_DB_URL=$MONKE_DB_URL" >> ./.gradle/gradle.properties
+          echo "MONKE_DB_USER=$MONKE_DB_USER" >> ./.gradle/gradle.properties
+          echo "MONKE_DB_PASSWORD=$MONKE_DB_PASSWORD" >> ./.gradle/gradle.properties
       - uses: actions/checkout@v2
       - name: Set up JDK 15
         uses: actions/setup-java@v2
