--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASS }}
-          repository: toadlesss/monkebot
+          repository: frogg1t/monkebot
           tags: latest
       - name: reload vps
         uses: appleboy/ssh-action@master
