--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,4 +50,5 @@ jobs:
           port: 22
           script: |
             cd ~/docker/monkebot
-            ./rebuild.sh
+            ./rebuild
+            
